auto completion off

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     <h2>Berhampore Iskcon Youth</h2>
 
     <section>
-        <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+        <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name"
+            autocomplete="off">
 
         <table>
             <thead>
