--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./asset/logo.jpg" type="image/x-icon">
     <title>Iskcon Youth</title>
 
     <style>
@@ -57,7 +57,7 @@
         }
 
         #myInput {
-            background: url(./search-icon3.png) no-repeat;
+            background: url(./asset/search-icon3.png) no-repeat;
             background-size: 38px 38px;
             /* background-position: 10px 12px; */
             /* width: 50%; */
@@ -111,7 +111,7 @@
 
 <body>
     <header>
-        <img src="logo-removebg-preview.png" alt="">
+        <img src="asset/logo-removebg-preview.png" alt="">
         <!-- <h2>Iskcon Youth</h2> -->
     </header>
 
@@ -125,7 +125,7 @@
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th>D-O-B<button type="button" id="btn"><img src="./icon-filter.png" alt="filter"></button></th>
+                        <th>D-O-B<button type="button" id="btn"><img src="./asset/icon-filter.png" alt="filter"></button></th>
                     </tr>
                 </thead>
                 <tbody class="stuData"></tbody>
