--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         }
 
         body {
-            background: linear-gradient(340deg, #aa5d0563, transparent);
-            height: 100vh;
+
+            /* height: 100vh; */
         }
 
         .hide {
@@ -26,7 +26,7 @@
         section {
             width: 95%;
             border: 2px solid;
-            height: 60vh;
+            /* height: 60vh; */
             overflow: auto;
             margin: auto;
             border-radius: 5px;
@@ -106,6 +106,16 @@
             /* border-radius: 50%; */
             /* box-shadow: 0px 6px 15px 0px black; */
         }
+
+        #bgColor {
+            background: linear-gradient(340deg, #aa5d0563, transparent);
+            width: 100vw;
+            height: 100vh;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: -100;
+        }
     </style>
 </head>
 
@@ -114,6 +124,8 @@
         <img src="asset/logo-removebg-preview.png" alt="">
         <!-- <h2>Iskcon Youth</h2> -->
     </header>
+
+    <div id="bgColor"></div>
 
     <div>
 
@@ -125,7 +137,8 @@
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th>D-O-B<button type="button" id="btn"><img src="./asset/icon-filter.png" alt="filter"></button></th>
+                        <th>D-O-B<button type="button" id="btn"><img src="./asset/icon-filter.png"
+                                    alt="filter"></button></th>
                     </tr>
                 </thead>
                 <tbody class="stuData"></tbody>
