--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
             left: 0;
             z-index: -100;
         }
+
+        .textCenter {
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -136,8 +140,8 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>D-O-B<button type="button" id="btn"><img src="./asset/icon-filter.png"
+                        <th class="textCenter">Name</th>
+                        <th class="textCenter">D-O-B<button type="button" id="btn"><img src="./asset/icon-filter.png"
                                     alt="filter"></button></th>
                     </tr>
                 </thead>
