--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
             padding: 0; */
         }
 
-        body {
-
-            /* height: 100vh; */
-        }
-
         .hide {
             display: none;
         }
@@ -165,9 +160,19 @@
             stuData.append(tr);
         }
 
-        fetch("./sample.json")
+        fetch("./data.json")
             .then(res => res.json())
             .then(data => {
+                data.sort(function (a, b) {
+                    let d1 = new Date(a.DOB).getDate(), d2 = new Date(b.DOB).getDate()
+                    if (d1 > d2) {
+                        return 1;
+                    }
+                    else if (d1 < d2) {
+                        return -1;
+                    }
+                })
+                console.log(data);
                 data.forEach(data => {
                     appendData(data);
                 });
