--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         fetch("./data.json")
             .then(res => res.json())
             .then(data => {
+                console.log(data);
                 data.sort(function (a, b) {
                     let d1 = new Date(a.DOB).getDate(), d2 = new Date(b.DOB).getDate()
                     if (d1 > d2) {
@@ -61,7 +62,15 @@
                         return -1;
                     }
                 })
-                // console.log(data);
+                data.sort(function (a, b) {
+                    let m1 = new Date(a.DOB).getMonth(), m2 = new Date(b.DOB).getMonth()
+                    if (m1 > m2) {
+                        return 1;
+                    }
+                    else if (m1 < m2) {
+                        return -1;
+                    }
+                })
                 data.forEach(data => {
                     appendData(data);
                 });
